--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,4 +1,41 @@
-<p>dashboard works!</p>
-<div>
-  <canvas id="myChart"></canvas>
-</div>
+<mat-drawer-container class="example-container" autosize>
+  <mat-drawer #drawer class="example-sidenav" mode="side" opened>
+    <app-profile-photo-template
+      style="display: flex; justify-content: center"
+    ></app-profile-photo-template>
+    <h3 style="text-align: center"><strong>Egg D. Dogg</strong></h3>
+    <p style="text-align: center">CEO EGGD INDUSTRIES</p>
+    <hr />
+    <button mat-button style="width: 100%">
+      <div style="display: flex; align-items: center">
+        <mat-icon>home</mat-icon>
+        <p style="margin: 0; padding: 0 1rem 0 1rem">Dashboard</p>
+      </div>
+    </button>
+    <button mat-button style="width: 100%">
+      <div style="display: flex; align-items: center">
+        <mat-icon>assignment</mat-icon>
+        <p style="margin: 0; padding: 0 1rem 0 1rem">Balance</p>
+      </div>
+    </button>
+    <button mat-button style="width: 100%">
+      <div style="display: flex; align-items: center">
+        <mat-icon>list</mat-icon>
+        <p style="margin: 0; padding: 0 1rem 0 1rem">Watch List</p>
+      </div>
+    </button>
+  </mat-drawer>
+
+  <div class="example-sidenav-content">
+    <mat-toolbar>
+      <button
+        mat-icon-button
+        class="example-icon"
+        aria-label="Example icon-button with menu icon"
+        (click)="drawer.toggle()"
+      >
+        <mat-icon>menu</mat-icon>
+      </button>
+    </mat-toolbar>
+  </div>
+</mat-drawer-container>
