--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,41 +1,17 @@
-<mat-drawer-container class="example-container" autosize>
-  <mat-drawer #drawer class="example-sidenav" mode="side" opened>
-    <app-profile-photo-template
-      style="display: flex; justify-content: center"
-    ></app-profile-photo-template>
-    <h3 style="text-align: center"><strong>Egg D. Dogg</strong></h3>
-    <p style="text-align: center">CEO EGGD INDUSTRIES</p>
-    <hr />
-    <button mat-button style="width: 100%">
-      <div style="display: flex; align-items: center">
-        <mat-icon>home</mat-icon>
-        <p style="margin: 0; padding: 0 1rem 0 1rem">Dashboard</p>
-      </div>
-    </button>
-    <button mat-button style="width: 100%">
-      <div style="display: flex; align-items: center">
-        <mat-icon>assignment</mat-icon>
-        <p style="margin: 0; padding: 0 1rem 0 1rem">Balance</p>
-      </div>
-    </button>
-    <button mat-button style="width: 100%">
-      <div style="display: flex; align-items: center">
-        <mat-icon>list</mat-icon>
-        <p style="margin: 0; padding: 0 1rem 0 1rem">Watch List</p>
-      </div>
-    </button>
-  </mat-drawer>
-
-  <div class="example-sidenav-content">
-    <mat-toolbar>
-      <button
-        mat-icon-button
-        class="example-icon"
-        aria-label="Example icon-button with menu icon"
-        (click)="drawer.toggle()"
-      >
-        <mat-icon>menu</mat-icon>
-      </button>
-    </mat-toolbar>
-  </div>
-</mat-drawer-container>
+<h1>Dashboard</h1>
+<mat-grid-list cols="2" rowHeight="2:1">
+  <mat-grid-tile>
+    <mat-card style="width: 90%; height: 90%">
+      <app-chart-template type="bar"></app-chart-template>
+    </mat-card>
+  </mat-grid-tile>
+  <mat-grid-tile>
+    <mat-card>Simple card</mat-card>
+  </mat-grid-tile>
+  <mat-grid-tile>
+    <mat-card>Simple card</mat-card>
+  </mat-grid-tile>
+  <mat-grid-tile>
+    <mat-card>Simple card</mat-card>
+  </mat-grid-tile>
+</mat-grid-list>
