--- a/src/app/pages/balance/balance.component.html
+++ b/src/app/pages/balance/balance.component.html
@@ -1,1 +1,96 @@
-<p>balance works!</p>
+<input
+  type="file"
+  #file
+  placeholder="Choose file"
+  (change)="uploadFile(file.files)"
+/>
+
+<div class="table-wrapper">
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
+
+    <!-- Position Column -->
+    <ng-container matColumnDef="Date">
+      <th mat-header-cell *matHeaderCellDef>No.</th>
+      <td mat-cell *matCellDef="let element">{{ element.Date }}</td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="Original Date">
+      <th mat-header-cell *matHeaderCellDef>Original Date</th>
+      <td mat-cell *matCellDef="let element">{{ element["Original Date"] }}</td>
+    </ng-container>
+
+    <!-- Weight Column -->
+    <ng-container matColumnDef="Account Type">
+      <th mat-header-cell *matHeaderCellDef>Account Type</th>
+      <td mat-cell *matCellDef="let element">{{ element["Account Type"] }}</td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="Account Name">
+      <th mat-header-cell *matHeaderCellDef>Account Name</th>
+      <td mat-cell *matCellDef="let element">{{ element["Account Name"] }}</td>
+    </ng-container>
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="Account Number">
+      <th mat-header-cell *matHeaderCellDef>Account Number</th>
+      <td mat-cell *matCellDef="let element">
+        {{ element["Account Number"] }}
+      </td>
+    </ng-container>
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="Institution Name">
+      <th mat-header-cell *matHeaderCellDef>Institution Name</th>
+      <td mat-cell *matCellDef="let element">
+        {{ element["Institution Name"] }}
+      </td>
+    </ng-container>
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="Name">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let element">{{ element["Name"] }}</td>
+    </ng-container>
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="Custom Name">
+      <th mat-header-cell *matHeaderCellDef>Custom Name</th>
+      <td mat-cell *matCellDef="let element">{{ element["Custom Name"] }}</td>
+    </ng-container>
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="Amount">
+      <th mat-header-cell *matHeaderCellDef>Amount</th>
+      <td mat-cell *matCellDef="let element">{{ element["Amount"] }}</td>
+    </ng-container>
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="Description">
+      <th mat-header-cell *matHeaderCellDef>Description</th>
+      <td mat-cell *matCellDef="let element">{{ element["Description"] }}</td>
+    </ng-container>
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="Category">
+      <th mat-header-cell *matHeaderCellDef>Category</th>
+      <td mat-cell *matCellDef="let element">{{ element["Category"] }}</td>
+    </ng-container>
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="Note">
+      <th mat-header-cell *matHeaderCellDef>Note</th>
+      <td mat-cell *matCellDef="let element">{{ element["Note"] }}</td>
+    </ng-container>
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="Ignored From">
+      <th mat-header-cell *matHeaderCellDef>Ignored From</th>
+      <td mat-cell *matCellDef="let element">{{ element["Ignored From"] }}</td>
+    </ng-container>
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="Tax Deductible">
+      <th mat-header-cell *matHeaderCellDef>Tax Deductible</th>
+      <td mat-cell *matCellDef="let element">
+        {{ element["Tax Deductible"] }}
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+</div>
